# faster-rcnn-C--interface

./: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  faster_rcnn.hpp~  main  main.cpp
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  faster_rcnn.cpp  faster_rcnn.cpp~  faster_rcnn.hpp  faster_rcnn.hpp~
